<?xml version="1.0"?>
<package format="2">
  <name>beoarm_robot_server</name>
  <version>1.0.0</version>
  <description>Robot Server for Beo Arm M4</description>

  <maintainer email="dummy@dum.com">Dummy Dum</maintainer>

  <license>MIT</license>

  <maintainer email="dummy@dum.com">Dummy Dum</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tmux</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
</package>

